--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-791.1KB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8060, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
-  - {name: 🇨🇳 中国-6.58MB/s(Youtube:不良林), server: 116.129.254.78, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.78}}
-  - {name: 🇯🇵 日本-6.79MB/s(Youtube:不良林), server: 81.90.190.218, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
-  - {name: 🇯🇵 日本-3.27MB/s(Youtube:不良林), server: 81.90.190.218, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-471.9KB/s(Youtube:不良林), server: 159.27.90.254, port: 63087, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /mugua, ws-headers: {Host: 159.27.90.254}}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8070, type: ss, cipher: aes-128-gcm, password: 66f661b6-d148-493a-ae9a-c1b65ff2e669}
+  - {name: 🇺🇸 美国-2.43MB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.70MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.48MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.80MB/s(Youtube:不良林), server: 81.90.190.218, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-5.51MB/s(Youtube:不良林), server: c86s3.jamjams3.net, port: 31567, type: vmess, uuid: 7e98d7df-0fc1-45f3-8a0c-f840218b4c22, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-13.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-13.25MB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20727, type: trojan, password: c2d62c65-5d48-3d17-8982-b4e85377c8c1, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 50858, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.80MB/s(Youtube:不良林), server: 116.129.254.65, port: 63004, type: vmess, uuid: 352ba93c-fd92-3055-ad10-b3599ff2802f, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.129.254.65}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-791.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.58MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.79MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.43MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.80MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-13.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-13.25MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.80MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
