--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.64MB/s(Youtube:不良林), server: rbzz.jddsb.cf, port: 1003, type: vmess, uuid: 104ef5de-c177-464c-b3cc-6063a4afe97a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /cctv13/hd.m3u8, ws-headers: {Host: rbzz.jddsb.cf}}
-  - {name: 🇸🇬 新加坡-189.6KB/s(Youtube:不良林), server: 626sg05.ok365.cyou, port: 443, type: trojan, password: 8ca09dac-c2d3-4aeb-87e5-26b64ebcf5cf, sni: 626sg05.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.17MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 43960, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 2, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /j20-usa3-242, ws-headers: {Host: pp1.zhengzhongfeizhu.xyz}}
-  - {name: 🇫🇷 法国-1.41MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-304.1KB/s(Youtube:不良林), server: 89.31.126.171, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-11.75MB/s(Youtube:不良林), server: trojan.linkdns.xyz, port: 40202, type: trojan, password: a04f6f85-18a7-3f41-8389-663ebae403cf, sni: trojan.linkdns.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-578.2KB/s(Youtube:不良林), server: 194.124.35.40, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-4.45MB/s(Youtube:不良林), server: 81.90.190.218, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-5.54MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 22168, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.43MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33004, type: vmess, uuid: eb2f8154-ff58-3b99-b393-28c8eecdbe64, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: c86s2.jamjams3.net, port: 31567, type: ss, cipher: aes-256-gcm, password: VFZncMwjr6VGtEyk}
   - {name: 🇺🇸 美国-546.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-3.48MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇺🇸 美国-3.48MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
   - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: 152.69.197.60, port: 1069, type: vmess, uuid: ac8e26fe-8150-4b60-ae64-82fc77eba2cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.32MB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.64MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-189.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.17MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-304.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.75MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-578.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.54MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.43MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-546.1KB/s(Youtube:不良林)
-      - 未知国家-3.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.48MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.32MB/s(Youtube:不良林)
 rules:
