--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,39 +5,35 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-247.1KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
   - {name: 🇨🇳 中国-152.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33003, type: vmess, uuid: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-254.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33005, type: vmess, uuid: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇭🇰 香港-3.54MB/s(Youtube:不良林), server: 20.205.39.179, port: 12388, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -49,29 +45,26 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -87,10 +80,9 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-247.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-152.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-254.2KB/s(Youtube:不良林)
       - 🇭🇰 香港-3.54MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-319.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
